<resources>
    <string name="app_name">MusicApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Trending</string>
    <string name="nav_movies">Latest</string>
    <string name="nav_notifications">SuperHit</string>
    <string name="nav_settings">New Releases</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Trending</item>
        <item>Latest</item>
        <item>SuperHit</item>
        <item>New Releases</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Add your YOUTUBE_DEVELOPER_KEY -->
    <string name="YOUTUBE_DEVELOPER_KEY">AIzaSyDQphPQ04clr5yoFb5oR62uuj04ZjnHfRk</string>
</resources>
