<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <group android:checkableBehavior="single" android:id="@+id/nav_home1">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/nav_home" >
        </item>
        </group>
    <group android:checkableBehavior="single" android:id="@+id/nav_photos1">
            <item
                android:id="@+id/nav_photos"
                android:icon="@drawable/ic_insert_photo_black_24dp"
                android:title="@string/nav_photos" >
            </item>
    </group>
    <group android:checkableBehavior="single" android:id="@+id/nav_movies1">
            <item
                android:id="@+id/nav_movies"
                android:icon="@drawable/ic_movie_black_24dp"
                android:title="@string/nav_movies">
            </item>
    </group>

    <group android:checkableBehavior="single" android:id="@+id/nav_notifications1">
            <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_notifications_active_black_24dp"
                android:title="@string/nav_notifications">
            </item>
    </group>

    <group android:checkableBehavior="single" android:id="@+id/nav_settings1">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_settings" >
            </item>
        </group>

        <item android:title="Other">
            <menu>
                <item
                    android:id="@+id/nav_about_us"
                    android:title="@string/nav_about_us" >
                </item>
                <item
                    android:id="@+id/nav_privacy_policy"
                    android:title="@string/privacy_policy" >
                </item>
            </menu>
        </item>

    </menu>

